added correct mappings